# Cubesat-1u-comms-first

./: CHANGELOG.md  README.md  pyproject.toml
configs/: baseline_sband_stub.yaml  baseline_uhf.yaml
docs/: 01_requirements.md  02_conops.md  03_link_budget.md  04_ground_station.md
src/cubesat_comms/: config.py
src/cubesat_comms/framing/: beacon_frame.py
src/cubesat_comms/link_budget/: budget.py
tests/: test_frame_crc.py  test_link_budget.py
