[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cubesat-comms-first"
version = "0.1.0"
description = "CubeSat 1U COMMS-first: link budget + Doppler + framing + CI"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
